--- a/Normalized_ORG_RUN_Regression_Spatial_temporal_graph_neural_networkV2a.ipynb
+++ b/Normalized_ORG_RUN_Regression_Spatial_temporal_graph_neural_networkV2a.ipynb
@@ -636,7 +636,12 @@
         "#                 'soil_moisture_am', 'soil_moisture_pm', 'NDVI', 'EVI', 'next_month_tempreature',\n",
         "#                 'next_month_precipitation', 'year', 'month2', \"spei01\"]\n",
         "\n",
-        "feature_names = [  'temperature_2m',  'u_component_of_wind_10m',\n",
+        "# feature_names = [  'Month', 'Lat', 'Lon','Lat_nom', 'Lon_nom','temperature_2m',  'u_component_of_wind_10m',\n",
+        "#                  'v_component_of_wind_10m', 'surface_net_solar_radiation_sum', 'total_evaporation_sum',\n",
+        "#                  'soil_moisture_am', 'soil_moisture_pm', 'NDVI', 'EVI', 'next_month_tempreature',\n",
+        "#                  'next_month_precipitation',    'spei01' ]\n",
+        "\n",
+        "feature_names = [   'temperature_2m',  'u_component_of_wind_10m',\n",
         "                 'v_component_of_wind_10m', 'surface_net_solar_radiation_sum', 'total_evaporation_sum',\n",
         "                 'soil_moisture_am', 'soil_moisture_pm', 'NDVI', 'EVI', 'next_month_tempreature',\n",
         "                 'next_month_precipitation',    'spei01' ]\n",
@@ -726,7 +731,7 @@
         "id": "cGY4KbEF5x-l"
       },
       "id": "cGY4KbEF5x-l",
-      "execution_count": 61,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -739,10 +744,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ufQ5o0QQI9Xu",
-        "outputId": "3616e26d-7649-4483-b847-48cb9d1aaa11"
+        "outputId": "4214c793-5860-45f8-93ec-38e4aa3aa201"
       },
       "id": "ufQ5o0QQI9Xu",
-      "execution_count": 62,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -752,7 +757,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 86
         }
       ]
     },
@@ -7906,11 +7911,11 @@
         ""
       ],
       "metadata": {
-        "id": "dTrIbg8ZcWae",
-        "outputId": "7a3a40cf-a472-4cab-dd52-a82f20707c15",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dTrIbg8ZcWae",
+        "outputId": "7a3a40cf-a472-4cab-dd52-a82f20707c15"
       },
       "id": "dTrIbg8ZcWae",
       "execution_count": 53,
@@ -7936,11 +7941,11 @@
         "print ( y_tensor_test)"
       ],
       "metadata": {
-        "id": "0H4zOw-mcuDa",
-        "outputId": "1d1bbd29-bfe4-4308-b594-dabbba8f1a05",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0H4zOw-mcuDa",
+        "outputId": "1d1bbd29-bfe4-4308-b594-dabbba8f1a05"
       },
       "id": "0H4zOw-mcuDa",
       "execution_count": 54,
@@ -7951,6 +7956,33 @@
           "text": [
             "tensor([0.4217, 0.4300, 0.4215,  ..., 0.3055, 0.2828, 0.2375], device='cuda:0')\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "graph_data"
+      ],
+      "metadata": {
+        "id": "-00TdW6uldJw",
+        "outputId": "329be7d2-b2c0-4d5c-bf66-1577f83835c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "-00TdW6uldJw",
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Data(x=[83580, 17], edge_index=[2, 129700], y=[83580], train_mask=[83580], val_mask=[83580], test_mask=[83580], emb_mask=[83580])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 82
         }
       ]
     },
@@ -7968,7 +8000,10 @@
         "# x_tensor_test = torch.tensor([1.1, 2.2, 3.3])\n",
         "# y_tensor_test = torch.tensor([1.0, 2.0, 3.0])\n",
         "\n",
-        "\n",
+        "feature_column_names  = [  'Month', 'Lat', 'Lon','Lat_nom', 'Lon_nom','temperature_2m',  'u_component_of_wind_10m',\n",
+        "                 'v_component_of_wind_10m', 'surface_net_solar_radiation_sum', 'total_evaporation_sum',\n",
+        "                 'soil_moisture_am', 'soil_moisture_pm', 'NDVI', 'EVI', 'next_month_tempreature',\n",
+        "                 'next_month_precipitation',    'spei01' ]\n",
         "\n",
         "\n",
         "# Convert tensors to numpy arrays\n",
@@ -7992,30 +8027,34 @@
         "\n",
         "# Create a DataFrame\n",
         "df_columns = [f'Feature_{i}' for i in range(x_features_test.shape[1])] + ['Predicted', 'Actual', 'Actual_org']\n",
+        "\n",
+        "df_columns = feature_column_names + ['Predicted', 'Actual', 'Actual_org']\n",
+        "\n",
+        "\n",
         "df_data = np.hstack((x_features_test, predicted_test.reshape(-1, 1), actual_test.reshape(-1, 1), y_actual_test.reshape(-1, 1)))\n",
         "df = pd.DataFrame(df_data, columns=df_columns)\n",
         "\n",
         "# Save the DataFrame to a file\n",
-        "file_path = '/content/drive/MyDrive/DroughtCastAI/GNNTestRunresult0.csv'  # Adjust the path as needed\n",
+        "file_path = '/content/drive/MyDrive/DroughtCastAI/GNNTestRunresult1.csv'  # Adjust the path as needed\n",
         "df.to_csv(file_path, index=False)\n",
         "\n",
         "print(f'DataFrame saved to {file_path}')\n"
       ],
       "metadata": {
-        "id": "UX6SVHmje65g",
-        "outputId": "243ec0bd-2a0f-4a02-9f4e-e69cf6ac8650",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UX6SVHmje65g",
+        "outputId": "cf30c9b2-1229-4f0c-d9c7-7cbb60222647"
       },
       "id": "UX6SVHmje65g",
-      "execution_count": 69,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "DataFrame saved to /content/drive/MyDrive/DroughtCastAI/GNNTestRunresult0.csv\n"
+            "DataFrame saved to /content/drive/MyDrive/DroughtCastAI/GNNTestRunresult1.csv\n"
           ]
         }
       ]
@@ -8036,7 +8075,7 @@
         "import pandas as pd\n",
         "\n",
         "# Define the file path (adjust this to the location of your saved file)\n",
-        "file_path = '/content/drive/MyDrive/DroughtCastAI/GNNTestRunresult0.csv'\n",
+        "file_path = '/content/drive/MyDrive/DroughtCastAI/GNNTestRunresult1.csv'\n",
         "\n",
         "# Load the DataFrame from the saved file\n",
         "df = pd.read_csv(file_path)\n",
@@ -8051,68 +8090,112 @@
         "print(description)"
       ],
       "metadata": {
-        "id": "OVaxdd1ihjIU",
-        "outputId": "1613f80e-a8c0-4fd4-b62a-314283be7c2b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OVaxdd1ihjIU",
+        "outputId": "7225ca8f-9a71-4e62-e8d0-3a45827331f7"
       },
       "id": "OVaxdd1ihjIU",
-      "execution_count": 70,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   Feature_0  Feature_1  Feature_2  Feature_3  Feature_4  Feature_5  \\\n",
-            "0   0.334201   0.424086   0.414068   0.278462   0.846060   0.365647   \n",
-            "1   0.271991   0.494057   0.342901   0.300742   0.934387   0.168256   \n",
-            "2   0.292366   0.462789   0.372334   0.302574   0.939701   0.226852   \n",
-            "3   0.308521   0.549707   0.381113   0.295905   0.923007   0.216160   \n",
-            "4   0.331718   0.508391   0.350324   0.289753   0.832976   0.210220   \n",
+            "      Month     Lat     Lon  Lat_nom   Lon_nom  temperature_2m  \\\n",
+            "0  202206.0 -33.238  18.865      0.0  0.526321        0.334201   \n",
+            "1  202206.0 -33.238  20.661      0.0  0.552628        0.271991   \n",
+            "2  202206.0 -33.238  22.458      0.0  0.578949        0.292366   \n",
+            "3  202206.0 -33.238  24.255      0.0  0.605270        0.308521   \n",
+            "4  202206.0 -33.238  26.051      0.0  0.631577        0.331718   \n",
             "\n",
-            "   Feature_6  Feature_7  Feature_8  Feature_9  Feature_10  Feature_11  \\\n",
-            "0   0.353925   0.385227   0.234839   0.176332    0.083451    0.566873   \n",
-            "1   0.190538   0.227904   0.114245   0.144980    0.045033    0.612132   \n",
-            "2   0.209012   0.254745   0.134640   0.151744    0.031654    0.595937   \n",
-            "3   0.240424   0.306344   0.176766   0.177053    0.027715    0.561766   \n",
-            "4   0.240287   0.562232   0.361496   0.252398    0.028670    0.497300   \n",
+            "   u_component_of_wind_10m  v_component_of_wind_10m  \\\n",
+            "0                 0.424086                 0.414068   \n",
+            "1                 0.494057                 0.342901   \n",
+            "2                 0.462789                 0.372334   \n",
+            "3                 0.549707                 0.381113   \n",
+            "4                 0.508391                 0.350324   \n",
             "\n",
-            "   Predicted    Actual  Actual_org  \n",
-            "0   0.432150  0.421736    0.421736  \n",
-            "1   0.441100  0.430036    0.430036  \n",
-            "2   0.431906  0.421511    0.421511  \n",
-            "3   0.518915  0.481171    0.481171  \n",
-            "4   0.494069  0.511543    0.511543  \n",
-            "          Feature_0     Feature_1     Feature_2     Feature_3     Feature_4  \\\n",
-            "count  12520.000000  12520.000000  12520.000000  12520.000000  12520.000000   \n",
-            "mean       0.622435      0.428132      0.418799      0.541994      0.794723   \n",
-            "std        0.139634      0.091433      0.100061      0.117692      0.216782   \n",
-            "min        0.043065      0.041923      0.004919      0.001504      0.000000   \n",
-            "25%        0.540889      0.369920      0.367332      0.476365      0.595298   \n",
-            "50%        0.629871      0.439245      0.428190      0.551126      0.883593   \n",
-            "75%        0.711112      0.485368      0.474004      0.616890      0.988580   \n",
-            "max        0.996721      0.998166      0.973704      0.945417      0.999722   \n",
+            "   surface_net_solar_radiation_sum  total_evaporation_sum  soil_moisture_am  \\\n",
+            "0                         0.278462               0.846060          0.365647   \n",
+            "1                         0.300742               0.934387          0.168256   \n",
+            "2                         0.302574               0.939701          0.226852   \n",
+            "3                         0.295905               0.923007          0.216160   \n",
+            "4                         0.289753               0.832976          0.210220   \n",
             "\n",
-            "          Feature_5     Feature_6     Feature_7     Feature_8     Feature_9  \\\n",
-            "count  12520.000000  12520.000000  12520.000000  12520.000000  12520.000000   \n",
-            "mean       0.211200      0.204917      0.355403      0.294504      0.587360   \n",
-            "std        0.197284      0.182960      0.280274      0.226941      0.157896   \n",
-            "min        0.000003      0.001535      0.015258      0.009748      0.000000   \n",
-            "25%        0.051298      0.061663      0.080103      0.087699      0.500610   \n",
-            "50%        0.140984      0.133287      0.293235      0.228235      0.596039   \n",
-            "75%        0.319610      0.311283      0.597936      0.473265      0.690844   \n",
-            "max        1.000000      0.956317      0.991895      0.905787      1.000000   \n",
+            "   soil_moisture_pm      NDVI       EVI  next_month_tempreature  \\\n",
+            "0          0.353925  0.385227  0.234839                0.176332   \n",
+            "1          0.190538  0.227904  0.114245                0.144980   \n",
+            "2          0.209012  0.254745  0.134640                0.151744   \n",
+            "3          0.240424  0.306344  0.176766                0.177053   \n",
+            "4          0.240287  0.562232  0.361496                0.252398   \n",
             "\n",
-            "         Feature_10    Feature_11     Predicted        Actual    Actual_org  \n",
-            "count  1.252000e+04  12520.000000  12520.000000  12520.000000  12520.000000  \n",
-            "mean   7.985815e-02      0.445222      0.430573      0.442509      0.442509  \n",
-            "std    1.303744e-01      0.144935      0.114926      0.146464      0.146464  \n",
-            "min    3.316249e-16      0.000000     -0.026627      0.000000      0.000000  \n",
-            "25%    3.183548e-04      0.352478      0.369485      0.349964      0.349964  \n",
-            "50%    1.288451e-02      0.447545      0.440684      0.445131      0.445131  \n",
-            "75%    1.046278e-01      0.541227      0.502871      0.539834      0.539834  \n",
-            "max    9.021469e-01      1.000000      0.763509      1.000000      1.000000  \n"
+            "   next_month_precipitation    spei01  Predicted    Actual  Actual_org  \n",
+            "0                  0.083451  0.566873   0.432150  0.421736    0.421736  \n",
+            "1                  0.045033  0.612132   0.441100  0.430036    0.430036  \n",
+            "2                  0.031654  0.595937   0.431906  0.421511    0.421511  \n",
+            "3                  0.027715  0.561766   0.518915  0.481171    0.481171  \n",
+            "4                  0.028670  0.497300   0.494069  0.511543    0.511543  \n",
+            "               Month           Lat           Lon       Lat_nom       Lon_nom  \\\n",
+            "count   12520.000000  12520.000000  12520.000000  12520.000000  12520.000000   \n",
+            "mean   202260.014696      6.441029     18.655412      0.566285      0.523251   \n",
+            "std        47.689202     17.763517     15.786146      0.253515      0.231224   \n",
+            "min    202206.000000    -33.238000    -17.068000      0.000000      0.000000   \n",
+            "25%    202209.000000     -6.288000      8.085000      0.384621      0.368423   \n",
+            "50%    202301.000000      9.881000     20.661000      0.615379      0.552628   \n",
+            "75%    202305.000000     20.661000     29.644000      0.769227      0.684204   \n",
+            "max    202308.000000     36.831000     51.204000      1.000000      1.000000   \n",
+            "\n",
+            "       temperature_2m  u_component_of_wind_10m  v_component_of_wind_10m  \\\n",
+            "count    12520.000000             12520.000000             12520.000000   \n",
+            "mean         0.622435                 0.428132                 0.418799   \n",
+            "std          0.139634                 0.091433                 0.100061   \n",
+            "min          0.043065                 0.041923                 0.004919   \n",
+            "25%          0.540889                 0.369920                 0.367332   \n",
+            "50%          0.629871                 0.439245                 0.428190   \n",
+            "75%          0.711112                 0.485368                 0.474004   \n",
+            "max          0.996721                 0.998166                 0.973704   \n",
+            "\n",
+            "       surface_net_solar_radiation_sum  total_evaporation_sum  \\\n",
+            "count                     12520.000000           12520.000000   \n",
+            "mean                          0.541994               0.794723   \n",
+            "std                           0.117692               0.216782   \n",
+            "min                           0.001504               0.000000   \n",
+            "25%                           0.476365               0.595298   \n",
+            "50%                           0.551126               0.883593   \n",
+            "75%                           0.616890               0.988580   \n",
+            "max                           0.945417               0.999722   \n",
+            "\n",
+            "       soil_moisture_am  soil_moisture_pm          NDVI           EVI  \\\n",
+            "count      12520.000000      12520.000000  12520.000000  12520.000000   \n",
+            "mean           0.211200          0.204917      0.355403      0.294504   \n",
+            "std            0.197284          0.182960      0.280274      0.226941   \n",
+            "min            0.000003          0.001535      0.015258      0.009748   \n",
+            "25%            0.051298          0.061663      0.080103      0.087699   \n",
+            "50%            0.140984          0.133287      0.293235      0.228235   \n",
+            "75%            0.319610          0.311283      0.597936      0.473265   \n",
+            "max            1.000000          0.956317      0.991895      0.905787   \n",
+            "\n",
+            "       next_month_tempreature  next_month_precipitation        spei01  \\\n",
+            "count            12520.000000              1.252000e+04  12520.000000   \n",
+            "mean                 0.587360              7.985815e-02      0.445222   \n",
+            "std                  0.157896              1.303744e-01      0.144935   \n",
+            "min                  0.000000              3.316249e-16      0.000000   \n",
+            "25%                  0.500610              3.183548e-04      0.352478   \n",
+            "50%                  0.596039              1.288451e-02      0.447545   \n",
+            "75%                  0.690844              1.046278e-01      0.541227   \n",
+            "max                  1.000000              9.021469e-01      1.000000   \n",
+            "\n",
+            "          Predicted        Actual    Actual_org  \n",
+            "count  12520.000000  12520.000000  12520.000000  \n",
+            "mean       0.430573      0.442509      0.442509  \n",
+            "std        0.114926      0.146464      0.146464  \n",
+            "min       -0.026627      0.000000      0.000000  \n",
+            "25%        0.369485      0.349964      0.349964  \n",
+            "50%        0.440684      0.445131      0.445131  \n",
+            "75%        0.502871      0.539834      0.539834  \n",
+            "max        0.763509      1.000000      1.000000  \n"
           ]
         }
       ]
