--- a/Exploratory_Data_Analysis.ipynb
+++ b/Exploratory_Data_Analysis.ipynb
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "TaGH6jDyo1yd"
       },
@@ -56,7 +56,7 @@
         "id": "tCmSpV-FrBAm",
         "outputId": "9f420060-4843-4db6-bd9b-8f5aaf7ff20d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -81,7 +81,7 @@
           "height": 635
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1461,7 +1461,7 @@
           "height": 472
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1474,6 +1474,38 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Load the DataFrame from the saved file\n",
+        "file_path = '/content/drive/MyDrive/DroughtCastAI/GNNTestRunresult1.csv'  # Adjust the path as needed\n",
+        "df = pd.read_csv(file_path)\n",
+        "df2 = df[df['Predicted'] >= 0]\n",
+        "# Sample 100 points from the DataFrame\n",
+        "sampled_df = df2.sample(n=1000, random_state=42)  # Set random_state for reproducibility\n",
+        "\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "plt.scatter(sampled_df['Predicted'], sampled_df['Actual'], alpha=0.5)\n",
+        "\n",
+        "# Add a 45-degree line (y = x)\n",
+        "plt.plot([0, 1], [0, 1], color='red', linestyle='--', label='y=x')\n",
+        "\n",
+        "plt.title('SPEI Predicted vs Actual Sampling')\n",
+        "plt.xlabel('Predicted')\n",
+        "plt.ylabel('Actual')\n",
+        "plt.legend()\n",
+        "plt.grid(True)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "-A9Q3o8xT43-"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
